--- a/css/main.css
+++ b/css/main.css
@@ -42,4 +42,40 @@ button[type="reset"] {
     color: #2c3e50;
 }
 
+/******************* FORMULAIRES************************/
+form > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 
+form > ul > li {
+    margin-bottom: 1.5em;
+}
+
+label {
+    display: block;
+    margin-bottom: .5em;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+form {
+    padding: 20px;
+    margin: 2em auto 80px;
+    max-width: 450px;
+    background-color: white;
+    border: 6px solid #2c3e50;
+}
+
+h1 {
+    text-align: center;
+    font-size: 3rem;
+    color: white;
+    text-shadow: 2px 2px 2px #2c3e50;
+}
+
+input {
+    border: 2px solid #2c3e50;
+    padding: .5em;
+}
